Fix visuals in response comparison view
Sometimes in the response comparison view, I believe perhaps due to a
glitch / race condition in react / dash, when one removes one of two
response plots while parameter plots are displayed, the response plots
are resized in an unfortunate way, and cover up parts of the parameter
plot titles. We fix the height, which should rectify that issue.

We also make labels completely visible in the parameter comparison view.

Closes #378

--- a/webviz_ert/assets/ert-style.css
+++ b/webviz_ert/assets/ert-style.css
@@ -95,3 +95,6 @@
 	margin-left: .5rem;
 	margin-right: .5rem;
 }
+.allow-overflow * {
+	overflow: visible!important;
+}
